--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
     "name": "hconsole",
     "version": "0.0.0",
-    "dependencies": {},
+    "dependencies": {
+    },
     "devDependencies": {
+        "requirejs": "~2.1.5",
         "grunt": "~0.4.1",
         "grunt-contrib-copy": "~0.4.0",
         "grunt-contrib-concat": "~0.1.3",
@@ -23,6 +25,7 @@
         "grunt-rev": "~0.1.0",
         "grunt-karma": "~0.3.0",
         "grunt-open": "~0.2.0",
+        "grunt-shell": "~0.2.2",
         "matchdep": "~0.1.1",
         "grunt-google-cdn": "~0.1.1",
         "grunt-ngmin": "~0.0.2"
